toms-ops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: phee
    meta.helm.sh/release-namespace: paymenthub
    nginx.ingress.kubernetes.io/cors-allow-headers: platform-tenantid
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: operations_app operations_web
    app.kubernetes.io/managed-by: Helm
    heritage: Helm
    release: phee
  name: toms-ops
  namespace: paymenthub
spec:
  ingressClassName: nginx
  rules:
  - host: toms-ops.local
    http:
      paths:
      - backend:
          service:
            name: ph-ee-operations-app
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: sandbox-secret
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.4



  ingressClassName: nginx
  rules:
  - host: ops.local
    http:
      paths:
      - backend:
          service:
            name: ph-ee-operations-web
            port:
              number: 4200
        path: /paymenthub
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ph-ee-operations-web
            port:
              number: 80
        path: /api/v1/batches
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ph-ee-connector-bulk
            port:
              number: 80
        path: /batchtransactions
        pathType: ImplementationSpecific
